[gd_scene load_steps=6 format=3 uid="uid://fouibo25q742"]

[ext_resource type="PackedScene" uid="uid://cho8dk17530na" path="res://scenes/lobby.tscn" id="1_4ckc3"]
[ext_resource type="Script" path="res://scenes/main_lobby.gd" id="1_mcgwr"]
[ext_resource type="AudioStream" uid="uid://c7n3yno4urvtm" path="res://assets/interface-button-154180.mp3" id="3_45rbi"]
[ext_resource type="AudioStream" uid="uid://cn42ocf6jh2wk" path="res://assets/button-202966.mp3" id="4_d42y3"]
[ext_resource type="AudioStream" uid="uid://blh0myixd8k55" path="res://assets/bgm.mp3" id="5_ftm8i"]

[node name="Main Lobby" type="Node3D"]
script = ExtResource("1_mcgwr")

[node name="LOBBY" parent="." instance=ExtResource("1_4ckc3")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Start-Btn" type="Button" parent="Control"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="box-lab" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 267.0
offset_top = 1.0
offset_right = 534.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "Box Lab"

[node name="gd" type="Button" parent="Control/box-lab"]
layout_mode = 0
offset_top = 92.0
offset_right = 271.0
offset_bottom = 180.0
text = "GD"

[node name="low" type="Button" parent="Control/box-lab"]
layout_mode = 0
offset_top = 188.0
offset_right = 271.0
offset_bottom = 276.0
text = "LOW"

[node name="medium" type="Button" parent="Control/box-lab"]
layout_mode = 0
offset_top = 284.0
offset_right = 271.0
offset_bottom = 372.0
text = "MEDIUM"

[node name="high" type="Button" parent="Control/box-lab"]
layout_mode = 0
offset_left = -1.0
offset_top = 379.0
offset_right = 270.0
offset_bottom = 467.0
text = "HIGH"

[node name="extreme" type="Button" parent="Control/box-lab"]
layout_mode = 0
offset_left = -2.0
offset_top = 473.0
offset_right = 269.0
offset_bottom = 561.0
text = "EXTREME"

[node name="src" type="Button" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 93.0
offset_right = 264.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 30
text = "Source Code"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_45rbi")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_d42y3")

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ftm8i")
autoplay = true

[node name="Label" type="Label" parent="."]
offset_top = 596.0
offset_right = 328.0
offset_bottom = 649.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Alt+F4 to quit"

[connection signal="button_down" from="Control/Start-Btn" to="." method="_on_start_btn_button_down"]
[connection signal="mouse_entered" from="Control/Start-Btn" to="." method="_on_start_btn_mouse_entered"]
[connection signal="button_down" from="Control/box-lab/gd" to="." method="_on_gd_button_down"]
[connection signal="mouse_entered" from="Control/box-lab/gd" to="." method="_on_gd_mouse_entered"]
[connection signal="button_down" from="Control/box-lab/low" to="." method="_on_low_button_down"]
[connection signal="mouse_entered" from="Control/box-lab/low" to="." method="_on_low_mouse_entered"]
[connection signal="button_down" from="Control/box-lab/medium" to="." method="_on_medium_button_down"]
[connection signal="mouse_entered" from="Control/box-lab/medium" to="." method="_on_medium_mouse_entered"]
[connection signal="button_down" from="Control/box-lab/high" to="." method="_on_high_button_down"]
[connection signal="mouse_entered" from="Control/box-lab/high" to="." method="_on_high_mouse_entered"]
[connection signal="button_down" from="Control/box-lab/extreme" to="." method="_on_extreme_button_down"]
[connection signal="mouse_entered" from="Control/box-lab/extreme" to="." method="_on_extreme_mouse_entered"]
[connection signal="button_down" from="Control/src" to="." method="_on_src_button_down"]
[connection signal="mouse_entered" from="Control/src" to="." method="_on_src_mouse_entered"]
[connection signal="finished" from="bgm" to="." method="_on_bgm_finished"]
